organizando pastas de entities e adicionando configuração de roles (falta criar endpoint de login etc)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+jwt.public.key=classpath:key/public.pem
+jwt.private.key=classpath:key/private.pem
+
 spring.application.name=taskManager
 spring.datasource.url=jdbc:postgresql://localhost:5432/TaskManager
 spring.datasource.username=postgres
