implementando resto da parte de login, ja loga autentica etc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 
 spring.jpa.hibernate.ddl-auto=update
+#Serve para executar o data.sql -- controla quando e como o Spring Boot executa scripts SQL na inicialização.
+spring.sql.init.mode=always
