add dockerfile com configurações

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/TaskManager
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
-#Serve para executar o data.sql -- controla quando e como o Spring Boot executa scripts SQL na inicialização.
+#Serve para executar o data.sql -- controla quando e como o Spring Boot executa scripts SQL na inicializaÃ§Ã£o.
 spring.sql.init.mode=always
